<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/createText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/dialog_create_task"
            android:padding="8dp"
            android:textColor="?attr/colorPrimary"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:textSize="30sp"/>

        <ImageView
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_clear_24"
            android:layout_marginTop="20dp"
            android:layout_marginStart="200dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:padding="4dp">

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/new_task_description"
            android:padding="12dp"
            android:background="@drawable/edittext_background"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/star_favorite"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_star_border_24"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="Favorite star"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="15dp"
            android:padding="1dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/data_time_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/edit_time"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="@string/new_task_time"
            android:focusable="false"
            android:padding="10dp"
            android:background="@drawable/edittext_background"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btn_pick_datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="📅"
            android:textSize="25sp"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:textColor="@android:color/white"
            android:padding="6dp"
            android:minWidth="56dp"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/folder_level_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/edit_folder"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="@string/new_task_folder"
            android:padding="10dp"
            android:background="@drawable/edittext_background"
            android:textSize="16sp"/>


        <Button
            android:id="@+id/create_new_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create ✅"
            android:fontFamily=""
            android:textSize="20sp"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:textColor="@android:color/white"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:padding="6dp"
            android:minWidth="56dp"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

</LinearLayout>
